# ESCA

./: .gitignore  CMakeLists.txt  README.md  find_cpp_files.py
ESCA/: ASTWalker.cpp  ASTWalker.h  BinarySMT.cpp  BinarySMT.h  CMakeLists.txt  DefectStorage.cpp  DefectStorage.h  ESCA.sln  ESCAASTConsumer.cpp  ESCAASTConsumer.h  ESCAASTVisitor.cpp  ESCAASTVisitor.h  ExecSolver.cpp  ExecSolver.h  FSM.cpp  FSM.h  FormulaSMT.h  LeafPredicate.h  Output.h  PathStorage.cpp  PathStorage.h  SMTSet.h  Sort.cpp  StateFSM.cpp  StateFSM.h  Thesis.sln  Thesis.vcxproj  Thesis.vcxproj.filters  TransitionFSM.cpp  TransitionFSM.h  Variable.cpp  Variable.h  VariableSMT.cpp  VariableSMT.h  VersionedVariable.cpp  VersionedVariable.h  file.h  main.cpp
resource/: 1.cpp  diplom1.cpp  test1.cpp  test2.cpp
src/: ASTWalker.cpp  ASTWalker.h  BinarySMT.h  CMakeLists.txt  DefectStorage.h  ESCAASTConsumer.cpp  ESCAASTConsumer.h  ESCAASTVisitor.cpp  ESCAASTVisitor.h  ExecSolver.cpp  ExecSolver.h  FSM.cpp  FSM.h  FSMStorage.cpp  LeafPredicate.h  Output.h  PathStorage.cpp  PathStorage.h  PtrCounter.h  Sort.h  StateFSM.h  Variable.cpp  Variable.h  VariableSMT.cpp  VariableSMT.h  VersionedVariable.h  file.h  main.cpp
src/AST/: ASTWalker.cpp  ASTWalker.h  CMakeLists.txt  ESCAASTConsumer.cpp  ESCAASTConsumer.h  ESCAASTVisitor.cpp  ESCAASTVisitor.h  PathStorage.h
src/CWE-467/: CMakeLists.txt  Consumer.cpp  Consumer.h  Visitor.cpp  Visitor.h
src/FSM/: CMakeLists.txt  FSM.cpp  FSM.h  FSMStorage.h  LeafPredicate.h  StateFSM.cpp  StateFSM.h  TransitionFSM.cpp  TransitionFSM.h  TypesFSM.h  __FSMStorage.h
src/SMT/: BinarySMT.cpp  BinarySMT.h  CMakeLists.txt  FormulaSMT.h  SMTSet.h  Variable.h  VariableSMT.cpp  VariableSMT.h  VersionedVariable.cpp  VersionedVariable.h  __SMTSet.h
src/utils/: CMakeLists.txt  DefectStorage.cpp  DefectStorage.h  ExecSolver.h  Output.h  Sort.h  common.cpp  common.h
tests/: CMakeLists.txt  run_tests.cpp
tests/examples/: test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp
trunk/ESCA/: ASTWalker.cpp  ASTWalker.h  BinarySMT.cpp  BinarySMT.h  DefectStorage.cpp  ESCA.sln  ESCA.vcxproj  ESCAASTConsumer.cpp  ESCAASTConsumer.h  ESCAASTVisitor.cpp  ESCAASTVisitor.h  ExecSolver.cpp  ExecSolver.h  FSM.cpp  FSM.h  FSMStorage.cpp  FSMStorage.h  FormulaSMT.h  PathStorage.cpp  PathStorage.h  PtrCounter.h  StateFSM.cpp  StateFSM.h  TransitionFSM.h  TypesFSM.h  Variable.h  VariableSMT.cpp  VariableSMT.h  VersionedVariable.cpp  VersionedVariable.h  main.cpp
